# local_invoice_intelligence

./: .gitignore  README.md  main.py  pyproject.toml
app/: streamlit_app.py
benchmarks/docile/: README.md  run_baseline.sh  run_blank_ensemble.sh
benchmarks/docile/scripts/: analyze_baseline_plus.py  baseline_plus.py  config.py  eval_runner.py  extractor.py  ollama_controls.py  openai_provider.py  schema.py
benchmarks/kleister/: README.md
benchmarks/sroie/: README.md
configs/: example_fields.yaml
data/: eval_subset_ids.json  eval_subset_ids_sorted.json
experiments/docile_baseline_results/: README.md
results/: eval_report.json
src/: aggregate_rca.py  baseline_plus.py  config.py  eval_runner.py  evaluate_metrics.py  extractor.py  rca_runner.py  schema.py  sort_dataset.py  test_glm.py
src/local_invoice_intelligence/: __init__.py  cli.py  config.py
src/local_invoice_intelligence/batch/: __init__.py  runner.py
src/local_invoice_intelligence/eval/: __init__.py  adapters.py  runner.py  scoring.py
src/local_invoice_intelligence/export/: __init__.py  excel.py
src/local_invoice_intelligence/extraction/: __init__.py  fields.py  pipeline.py  validation.py
src/local_invoice_intelligence/models/: ollama_provider.py  openai_provider.py
src/local_invoice_intelligence/ocr/: __init__.py  transcript.py
tests/: test_blank_ensemble.py
