[project]
name = "local-invoice-intelligence"
version = "0.2.0"
description = "Local, private PDF field extraction toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docile-benchmark>=0.3.4",
    "numpy>=2.0.0",
    "ollama>=0.6.2",
    "onnxruntime>=1.23.2",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "pyyaml>=6.0.3",
    "rapidocr>=3.8.1",
    "python-dateutil>=2.9.0.post0",
    "rapidfuzz>=3.14.5",
    "openpyxl>=3.1.5",
    "streamlit>=1.52.0",
    "tqdm>=4.67.3",
]

[project.scripts]
lii = "local_invoice_intelligence.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_invoice_intelligence"]
